<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:keepScreenOn="true">

    <Button
        android:id="@+id/btnStartRun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_running"
        android:layout_margin="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnStopRun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_running"
        android:layout_margin="6dp"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/btnStartRun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnPrevRuns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev_runs"
        android:layout_margin="6dp"
        app:layout_constraintTop_toBottomOf="@id/btnStopRun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>