<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RunDetailFragment">

    <FrameLayout
        android:id="@+id/mapContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_landing_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tv_landing_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_stats"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/table"/>

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:stretchColumns="0">

        <TableRow
            android:layout_width="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/distance" />

            <TextView
                android:id="@+id/tv_length"
                android:layout_width="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="6dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/duration" />

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="6dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/speed" />

            <TextView
                android:id="@+id/tv_speed"
                android:layout_width="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="6dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/tracked_points" />

            <TextView
                android:id="@+id/tv_tracked_points"
                android:layout_width="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="6dp" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>